[tool.poetry]
name = "american_community_survey"
version = "0.1.0"
description = ""
authors = ["Colin Clapham <colinclapham18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"
loguru = "^0.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
